CD-ITX-Auto-Install/CD-ITX-Containers/itx-rs-prod/templates/denyallnetworkpolicy.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2022. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector:
    matchLabels:
      networking/allow-inernet-access: "true"
  ingress: []
